# jsontoconll

./: JsonToConll.sh  LICENSE  README.md  doccano-transformer.py  jsontoconll.py  jsontoformat.py  pyproject.toml
